--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
 </head>
-<body>his is riglow<br/>
-an audio engineer<br/>
-from Chicago, IL<br/>
-<a href="mailto:riglow@riglow.com>riglow@riglow.com</a><br/>
+<body><p>this is riglow</p>
+<p>an audio engineer</p>
+<p>from Chicago, IL</p>
+<p><a href="mailto:riglow@riglow.com">riglow@riglow.com</a></p>
 </body>
