--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
 </head>
-<body><p>this is riglow</p>
+<body><p>hi, i'm aegis lune eris</p>
 <p>an audio engineer</p>
-<p>from Chicago, IL</p>
+<p>from chicago, il</p>
 <p><a href="mailto:riglow@riglow.com">riglow@riglow.com</a></p>
 </body>
