--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 </head>
 <body><p>hi, i'm aegis lune eris</p>
 <p>an audio engineer</p>
-<p>from chicago, il</p>
+<p>from chicago</p>
 <p><a href="mailto:riglow@riglow.com">riglow@riglow.com</a></p>
 </body>
