--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
 </head>
-<body><p>hi, i'm aegis lune eris</p>
+<body><p>riglow is</p>
 <p>an audio engineer</p>
 <p>from chicago</p>
 <p><a href="mailto:riglow@riglow.com">riglow@riglow.com</a></p>
