--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 </head>
 <body><p>riglow is</p>
 <p>an audio engineer</p>
+<p>and grassroots media archivist</p>
 <p>from chicago</p>
 <p><a href="mailto:riglow@riglow.com">riglow@riglow.com</a></p>
 </body>
