--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <p>and grassroots media archivist</p>
 <p>from chicago</p>
 <p><a href="mailto:riglow@riglow.com">riglow@riglow.com</a></p>
-<p><a href="www.linkedin.com/in/aegiseris">linkedin</a> - <a href="soundcloud.riglow.com">soundcloud</a> - <a href="bandcamp.riglow.com">bandcamp</a> - <a href="patreon.riglow.com">patreon</a></p>
+<p><a href="www.linkedin.com/in/aegiseris">linkedin</a></p>
+<p><a href="soundcloud.riglow.com">soundcloud</a> - <a href="bandcamp.riglow.com">bandcamp</a> - <a href="patreon.riglow.com">patreon</a></p>
 <p><a href="donate.riglow.com">donate</a></p>
 </body>
