--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 </head>
 <body><p>riglow is</p>
 <p>an audio engineer</p>
-<p>and grassroots media archivist</p>
+<p>dj & producer</p>
+<p>and trans media archivist</p>
 <p>from chicago</p>
 <p><a href="mailto:riglow@riglow.com">riglow@riglow.com</a></p>
 <p><a href="www.linkedin.com/in/aegiseris">linkedin</a></p>
