--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <p>and trans media archivist</p>
 <p>from chicago</p>
 <p><a href="mailto:riglow@riglow.com">riglow@riglow.com</a></p>
-<p><a href="http://www.linkedin.com/in/aegiseris">linkedin</a></p>
-<p><a href="http://soundcloud.riglow.com">soundcloud</a> - <a href="http://bandcamp.riglow.com">bandcamp</a> - <a href="http://patreon.riglow.com">patreon</a></p>
+<p><a href="https://www.linkedin.com/in/erislylat/">linkedin</a></p>
+<p><a href="http://music.riglow.com">soundcloud</a> - <a href="http://bandcamp.riglow.com">bandcamp</a> - <a href="http://patreon.riglow.com">patreon</a></p>
 <p><a href="http://donate.riglow.com">donate</a></p>
 </body>
